...


class NotesListFragment(contentLayoutId: Int = 0) : Fragment(contentLayoutId) {

    private lateinit var notesStorageManager: NotesStorageManager
    val dialogName = "Rename Note"
    private val contentDescriptionDialog = "New Name"


    constructor() : this(0) {
        // Default constructor
    }

...
                    onDismissRequest = { showMenu.value = false }
                ) {
                    DropdownMenuItem(onClick = {
                        renamingNoteName.value = name
                        showRenameDialog.value = true
                    }) {
                        Text("Rename")
                    }
                    DropdownMenuItem(onClick = {
                        val intent = Intent(context, ParticipateInChallengeActivity::class.java)
                        intent.putExtra("musicName", name)
                        startActivity(intent)
                    }) {
                        Text("Challenges")
                    }
                    DropdownMenuItem(onClick = {
                        showShareMenu.value = true
                        sharedNoteName.value = name
                    }) {
                        Text("Share to friend")
                    }

                    // Add more DropdownMenuItem here for more options
                    // Added "com.github.scribeWizTeam.scribewiz.util.Export" option
                    DropdownMenuItem(onClick = {
                        if(export(name)){
                            buttonName = "Export"
                        }
                    }) {
                        Text(buttonName)
...
                }) {
                    Text("Rename")
                }
            },
            dismissButton = {
                Button(onClick = onDismissRequest) {
                    Text("Cancel")
                }
            }
        )
    }

}
...
