...
        context: Context,
        musicName: String
    ) {

        Column {
            Text(
                text = "Participate in a Challenge",
                style = MaterialTheme.typography.h4, // adjust text style as needed
                modifier = Modifier.padding(8.dp)
            )

            Spacer(modifier = Modifier.height(8.dp))
            challenges.forEach { challenge ->
...
